# EasyPaper

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  README.md  README_CN.md  eslint.config.mjs  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
.github/workflows/: auto-merge.yml  auto-review.yml  ci.yml  claude-review.yml
.omc/: project-memory.json
.omc/sessions/: af84e2c0-f4ca-4cba-840f-36af4c089d1f.json
.omc/state/: agent-replay-31bc6a07-5fb9-43a8-b21d-9d9f9242e79c.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
__mocks__/: react-markdown.tsx
__tests__/api/: analyze.test.ts  annotations.test.ts  chat-session-delete.test.ts  chat-sessions.test.ts  chat.test.ts  folders.test.ts  metadata-edit.test.ts  metadata-extract.test.ts  notes.test.ts  paper-id.test.ts  paper-patch.test.ts  paper-status.test.ts  papers.test.ts  settings.test.ts  upload.test.ts  zotero-collections.test.ts  zotero-import.test.ts  zotero-items.test.ts
__tests__/components/: batch-action-toolbar.test.tsx  confirm-modal.test.tsx  context-menu.test.tsx  folder-picker-modal.test.tsx  paper-table.test.tsx  (+3 more)
docs/: TAURI_BUILD.md
e2e/: pdf-viewer.spec.ts
public/: pdf_viewer.css
scripts/: parse-pdf.py
sidecar-dist/: version.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error_dialog.rs  lib.rs  main.rs  port_check.rs  sidecar.rs
tauri-frontend/: index.html
tauri-package-scripts/: build-sidecar.js  package.json
(+197 files in other folders)
