[package]
name = "easypaper"
version = "1.0.1"
description = "EasyPaper - Academic PDF analysis tool"
authors = ["LvXinTao"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "net", "sync"] }
thiserror = "2"
log = "0.4"
dirs = "6"
nix = { version = "0.29", features = ["signal", "process"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
